<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:columnCount="2"
                app:useDefaultMargins="true">

                <TextView
                    android:id="@+id/cityTextView"
                    style="@style/ContactTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    app:layout_column="1"
                    app:layout_row="5" />

                <TextView
                    android:id="@+id/streetLabelTextView"
                    style="@style/ContactLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_street"
                    app:layout_column="0"
                    app:layout_row="4" />

                <TextView
                    android:id="@+id/emailLabelTextView"
                    style="@style/ContactLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_email"
                    app:layout_column="0"
                    app:layout_row="3" />

                <TextView
                    android:id="@+id/nameTextView"
                    style="@style/ContactTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textAlignment="textStart"
                    app:layout_column="1"
                    app:layout_row="0" />

                <TextView
                    android:id="@+id/emailTextView"
                    style="@style/ContactTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    app:layout_column="1"
                    app:layout_row="3" />

                <TextView
                    android:id="@+id/stateLabelTextView"
                    style="@style/ContactLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_state"
                    app:layout_column="0"
                    app:layout_row="6" />

                <TextView
                    android:id="@+id/nameLabelTextView"
                    style="@style/ContactLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_name"
                    android:textAlignment="viewStart"
                    app:layout_column="0"
                    app:layout_row="0" />

                <TextView
                    android:id="@+id/phoneTextView"
                    style="@style/ContactTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textAlignment="textStart"
                    app:layout_column="1"
                    app:layout_row="2" />

                <TextView
                    android:id="@+id/cityLabelTextView"
                    style="@style/ContactLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_city"
                    app:layout_column="0"
                    app:layout_row="5" />

                <TextView
                    android:id="@+id/phoneLabelTextView"
                    style="@style/ContactLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_phone"
                    app:layout_column="0"
                    app:layout_row="2" />

                <TextView
                    android:id="@+id/streetTextView"
                    style="@style/ContactTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    app:layout_column="1"
                    app:layout_row="4" />

                <TextView
                    android:id="@+id/zipLabelTextView"
                    style="@style/ContactLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_zip"
                    app:layout_column="0"
                    app:layout_row="7" />

                <TextView
                    android:id="@+id/stateTextView"
                    style="@style/ContactTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    app:layout_column="1"
                    app:layout_row="6" />

                <TextView
                    android:id="@+id/zipTextView"
                    style="@style/ContactTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    app:layout_column="1"
                    app:layout_row="7" />
            </android.support.v7.widget.GridLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>